<resources>
    <string name="app_name">WiproProjectForTraning</string>
    <string name="tv_des">"acker factory blast in Punjab's Muktsar"</string>
    <string name="simple_ui">Simple UI</string>
    <string name="large_string">Large String</string>
    <string name="medium_string">Medium String</string>
    <string name="enter_text">Enter value here</string>
    <string name="click_here">Click Here</string>
    <string name="welcome_on_second_activity">Welcome on Second Activity</string>
    <string name="go_back">Go Back</string>
    <string name="go_next">Go next</string>
    <string name="learning_topic">Learning Topic</string>
    <string name="add_to_card">Add To Card</string>
    <string name="go_to_in_card_section">Go To in Card Section</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_amount">Total Amount : </string>
    <string name="total_item">Total Item :</string>
    <string name="amount">₹ %s</string>
    <string name="edit_profile">EDIT Profile</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
</resources>