<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".android.userProfile.UserProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:circularflow_defaultRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_circle"
        app:layout_constraintBottom_toBottomOf="@id/imProfile"
        app:layout_constraintEnd_toEndOf="@id/imProfile"
        app:layout_constraintStart_toStartOf="@id/imProfile"
        app:layout_constraintTop_toBottomOf="@id/imProfile" />

    <TextView
        android:id="@+id/tvEdit"
        style="@style/TextStyle.Medium.Bold"
        android:text="@string/edit_profile"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@id/imEdit"
        app:layout_constraintStart_toStartOf="@id/imEdit"
        app:layout_constraintTop_toBottomOf="@id/imEdit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlName"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="100dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEdit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlEmail"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="100dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPhone"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="100dp"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        style="@style/ButtonStyle.Medium"
        android:layout_width="0dp"
        android:padding="10dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@id/tlPhone"
        app:layout_constraintStart_toStartOf="@id/tlPhone"
        app:layout_constraintTop_toBottomOf="@id/tlPhone" />


</androidx.constraintlayout.widget.ConstraintLayout>